# orne_or

./: .rosinstall  README.md  orne_or_pkgs.install
orne_or/: CMakeLists.txt
orne_or_bringup/: package.xml
orne_or_bringup/launch/: orne_or.launch  orne_or_manipulator.launch  orne_or_manipulator_left_arm.launch  orne_or_manipulator_sim.launch  orne_or_model.launch  orne_or_sim.launch
orne_or_bringup/worlds/: 308room.world  308room_table.world
orne_or_description/: CMakeLists.txt
orne_or_description/launch/: test.launch
orne_or_description/meshes/: body_link.stl  elbow_roll_link.stl  hand_right.stl  head_link.stl  head_yaw_link.stl  l_hand_left_link.stl  l_hand_right_link.stl  l_wrist_pitch_link.stl  l_wrist_yaw_link.stl  r_hand_link.stl  r_wrist_pitch_link.stl  r_wrist_yaw_link.stl  sholder_roll_link.stl  shoulder_link.stl  shoulder_pitch_link.stl  wrist_roll_link.stl  wrist_yaw.stl
orne_or_description/rviz/: model.rviz
orne_or_description/urdf/: cit.xacro  head.gazebo  head.urdf.xacro  kinect.gazebo  kinect.urdf.xacro  manipulator.gazebo  manipulator.urdf  manipulator.urdf.xacro  orne_or.urdf.xacro  orne_or_cart.gazebo.xacro  orne_or_cart.urdf.xacro
orne_or_manipulation/cit_bringup/: package.xml
orne_or_manipulation/cit_description/: package.xml  test.launch
orne_or_manipulation/cit_gazebo/: package.xml
orne_or_manipulation/cit_manipulator_control/: package.xml
orne_or_manipulation/cit_setup/: CMakeLists.txt  package.xml
orne_or_manipulation/manipulator_driver/: README.md  package.xml
orne_or_manipulation/orne_or_manipulator_control/: CMakeLists.txt  package.xml
orne_or_manipulation/orne_or_manipulator_driver/: CMakeLists.txt  package.xml
orne_or_manipulation/orne_or_manipulator_driver/config/: cit_controller.yaml  cit_driver.yaml  orne_or_manipulator_driver.yaml  trajectory_control.yaml
orne_or_manipulation/orne_or_manipulator_driver/launch/: manipulator_controller.launch  manipulator_controller_left_arm.launch  manipulator_driver.launch  manipulator_driver_left_arm.launch
orne_or_manipulation/orne_or_manipulator_driver/msg/: MotorParameter.msg
orne_or_manipulation/orne_or_manipulator_driver/scripts/: manipulator_control.py  manipulator_control_keyboardcommand.py  manipulator_pose_planner.py
orne_or_manipulation/orne_or_manipulator_driver/src/: b3m.c  orne_or_manipulator_driver.cpp
orne_or_manipulation/orne_or_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
orne_or_manipulation/scripts/: arm_control.py
orne_or_navigation/: README.md  orne_or_pkgs.install
orne_or_navigation/orne_or/: package.xml
orne_or_navigation/orne_or_bringup/: CMakeLists.txt
orne_or_navigation/orne_or_description/: package.xml
orne_or_navigation/orne_or_navigation_executor/: CMakeLists.txt  package.xml
orne_or_navigation/orne_or_recovery_behavior/: CMakeLists.txt  package.xml
orne_or_navigation/orne_or_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
orne_or_navigation/orne_or_setup/: CMakeLists.txt
orne_or_navigation/orne_or_simulations/: CMakeLists.txt  package.xml
orne_or_navigation/orne_or_strategy/: CMakeLists.txt  package.xml
orne_or_navigation/orne_or_strategy/launch/: search_and_approach.launch
orne_or_navigation/orne_or_strategy/scripts/: depth.py  face_object.py  object_position.py  tf_object_position.py  tsukuba_challenge.py
orne_or_setup/: package.xml
orne_or_setup/config/: 70-sensors.rules
orne_or_setup/scripts/: create_udev_rules
orne_or_task_executor/: CMakeLists.txt  package.xml
orne_or_task_executor/launch/: task_executor.launch
orne_or_task_executor/scripts/: end_effector_controller.py  manipulator_control.py  manipulator_pose_planner.py  orne_or_info.py
rdc_manipulation/: rdc_manipulation_pkgs.install
rdc_manipulation/cit_bringup/: CMakeLists.txt  package.xml
rdc_manipulation/cit_description/: CMakeLists.txt  test.launch
rdc_manipulation/cit_gazebo/: CMakeLists.txt
rdc_manipulation/fixed_horn/: CMakeLists.txt  package.xml
rdc_manipulation/fixed_horn/config/: controller_sample.yaml  driver_sample.yaml  home_neck_controller.yaml  home_neck_driver.yaml
rdc_manipulation/fixed_horn/launch/: home_neck.launch  kondo_driver.launch
rdc_manipulation/fixed_horn/scripts/: kondo.sh
rdc_manipulation/fixed_horn/src/: fixed_horn.cpp
rdc_manipulation/fixed_horn/urdf/: horn.urdf
rdc_manipulation/manipulator_driver/: CMakeLists.txt
rdc_manipulation/manipulator_driver/config/: cit_controller.yaml  cit_driver.yaml  home_left_hand_controller.yaml  home_neck_driver.yaml  manipulator_driver.yaml  trajectory_control.yaml
rdc_manipulation/manipulator_driver/etc/: 80-kondo-ics.rules
rdc_manipulation/manipulator_driver/include/manipulator_driver/: b3m.h
rdc_manipulation/manipulator_driver/launch/: manipulator_controller.launch  manipulator_controller_left_arm.launch  manipulator_driver.launch
rdc_manipulation/manipulator_driver/msg/: MotorParameters.msg
rdc_manipulation/manipulator_driver/src/: b3m.c  manipulator_driver.cpp
rdc_manipulation/manipulator_driver/srv/: SetTorqueCoefficients.srv
voice_recognition/: recognized_text.txt
(+148 files in other folders)
