<?xml version="1.0"?>
<package format="2">
  <name>orne_or_manipulator_driver</name>
  <version>0.0.0</version>
  <description>The orne_or_manipulator_driver package</description>

  <maintainer email="yasuo.hayashibara@it-chiba.ac.jp">yasuohayashibara</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libftdi-dev</build_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>position_controllers</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
